<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_app"
    tools:context=".view.PermissionActivity">

    <TextView
        android:id="@+id/tvPermission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/permission"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:layout_marginEnd="@dimen/_20sdp"
        android:fontFamily="@font/poppins_regular"
        android:paddingVertical="10dp"
        android:paddingStart="50dp"
        android:text="@string/go"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvPermission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvPermission"
        tools:ignore="RtlSymmetry" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toTopOf="@id/nativeAds"
        app:layout_constraintTop_toBottomOf="@+id/tvPermission">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_10sdp">

            <ImageView
                android:id="@+id/ivPermission"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:contentDescription="@null"
                android:src="@drawable/img_permission" />

            <TextView
                android:id="@+id/tvContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_16sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/permission_description"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivPermission" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#2C2C2E"
                app:cardCornerRadius="@dimen/_12sdp"
                app:cardElevation="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/_12sdp"
                    android:paddingVertical="@dimen/_14sdp">

                    <TextView
                        android:id="@+id/tvNotification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:ellipsize="end"
                        android:fontFamily="@font/poppins_medium"
                        android:singleLine="true"
                        android:text="@string/notifications"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imgSwitchNotification"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_switch_non_select"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvDeviceLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#2C2C2E"
                android:layout_marginTop="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_12sdp"
                app:cardElevation="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/_12sdp"
                    android:paddingVertical="@dimen/_14sdp">

                    <TextView
                        android:id="@+id/tvDeviceLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:ellipsize="end"
                        android:fontFamily="@font/poppins_medium"
                        android:singleLine="true"
                        android:text="@string/device_location"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imgSwitchDeviceLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_switch_non_select"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/frLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_99000000"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_gravity="center"
            android:theme="@style/ProgressBarTheme" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/nativeAds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <include layout="@layout/load_native_intro" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
