<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_app"
    tools:context=".view.intro.IntroActivity">

    <LinearLayout
        android:id="@+id/ll_intro"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.45"
        android:layout_centerHorizontal="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_slide_intro"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDescriptionIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_app"
        android:paddingTop="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@id/nativeAds">

        <TextView
            android:id="@+id/tvTitleIntro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_medium"
            android:maxLines="1"
            android:text="@string/intro_title_1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/tvDescriptionIntro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvDescriptionIntro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_18sdp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_regular"
            android:maxLines="2"
            android:text="@string/intro_content_1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/btn_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/ll_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_18sdp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/btn_next"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_next">

            <ImageView
                android:id="@+id/img_circle_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_dot_selected" />

            <ImageView
                android:id="@+id/img_circle_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5sp"
                android:src="@drawable/ic_dot_not_select" />

            <ImageView
                android:id="@+id/img_circle_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_dot_not_select" />
        </LinearLayout>

        <TextView
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/next"
            android:textColor="@color/white"
            android:paddingHorizontal="@dimen/_20sdp"
            android:paddingVertical="@dimen/_5sdp"
            android:gravity="center"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tvDescriptionIntro"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/frLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_99000000"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_gravity="center"
            android:theme="@style/ProgressBarTheme" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/nativeAds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <include layout="@layout/load_native_intro" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
